Implement dashboard generation workflow
Co-authored-by: sandeepsankarankutty <212097473+sandeepsankarankutty@users.noreply.github.com>